# airflow-docker

./: .gitignore  docker-compose.yaml  pyproject.toml  setup.sh
dags/: test_dag.py
